rename to Test::LWP::UserAgent

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name        = Test-Mock-LWP-UserAgent-ButAwesome
 author      = Karen Etheridge <ether@cpan.org>
-abstract    = A mock LWP::UserAgent suitable for testing network calls
+abstract    = Renamed to Test-LWP-UserAgent
 copyright_holder = Karen Etheridge
 license     = Perl_5
 
