typo in config parameter

--- a/dist.ini
+++ b/dist.ini
@@ -40,8 +40,6 @@ license     = Perl_5
 ;[Test::UnusedVars]  ; broken in 5.16.0!
 [Test::ChangesHasContent]
 
-
-
 [Test::CheckDeps]
 :version = 0.005
 fatal = 1
@@ -62,7 +60,7 @@ allow_dirty =
 format = %-8V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
 
 [Git::Commit]
-allow-dirty = Changes
+allow_dirty = Changes
 commit_msg = %N-%v%t%n%n%c
 
 [Git::Tag]
